--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,14 @@ services:
   # ORDER SERVICE
   order-service:
     build: ./services/order_service
+    env_file:
+      - ./services/order_service/.env
     container_name: order-service
     ports:
       - "3000:3000"
     environment:
       DATABASE_HOST: order-db
-      CUSTOMER_SERVICE_URL: http://customer-service:3000
+      CUSTOMER_SERVICE_URL: http://customer-service:3001
     depends_on:
       - order-db
       - customer-service
@@ -24,12 +26,16 @@ services:
   # CUSTOMER SERVICE
   customer-service:
     build: ./services/customer_service
+    env_file:
+      - ./services/customer_service/.env
     container_name: customer-service
     ports:
       - "3001:3000"
     depends_on:
-      - customer-db
-      - rabbitmq
+      rabbitmq:
+        condition: service_healthy
+      customer-db:
+        condition: service_started
     networks:
       - microservices-net
     volumes:
@@ -60,10 +66,31 @@ services:
     image: rabbitmq:3-management
     container_name: rabbitmq
     ports:
+      - "5672:5672"
       - "15672:15672"
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "ping"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
     networks:
       - microservices-net
-
+  customer-consumer:
+    build: ./services/customer_service
+    container_name: customer-consumer
+    volumes:
+      - ./services/customer_service:/app
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      customer-db:
+        condition: service_started
+    environment:
+      DATABASE_URL: postgres://postgres:postgres@customer-db:5432/customer_service_development
+      RABBITMQ_URL: amqp://guest:guest@rabbitmq:5672
+    entrypoint: ["./entrypoint.sh"]
+    networks:
+      - microservices-net
 volumes:
   order-db-data:
   customer-db-data:
