Add OrderCreatedConsumer for handling order.created events, implement CustomersController for customer retrieval, and create FindCustomer service. Update database configuration to use environment variables and add tests for customer API. Include FactoryBot for test data generation.

--- a/services/customer_service/config/database.yml
+++ b/services/customer_service/config/database.yml
@@ -1,11 +1,15 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: postgres
-  password: postgres
-  host: customer-db
+  host: <%= ENV.fetch("DATABASE_HOST") %>
+  username: <%= ENV.fetch("DATABASE_USER") %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD") %>
   pool: 5
 
 development:
   <<: *default
-  database: customer_service_development
+  database: <%= ENV.fetch("DATABASE_NAME") %>_development
+  
+test:
+  <<: *default
+  database: <%= ENV.fetch("DATABASE_NAME") %>_test  
