Update .gitignore to include log and cache files for order_service

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ Thumbs.db
 .ruby-version
 .ruby-gemset
 services/**/.git
+services/order_service/log/development.log
+services/order_service/log/development.log
+services/order_service/tmp/cache/bootsnap/load-path-cache
